--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,5 @@
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true,
     "python.linting.mypyEnabled": false,
-    "python.pythonPath": "/usr/bin/python"
+    "python.pythonPath": "/usr/bin/python3"
 }
